Cleanup config defaults to be better, fix sysinfo rand usage

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "token": "hunter2",
   "botkey": "!",
-  "activeChannels": ["golemworks", "bot"],
-  "gameStatus": "tavernbot | !help for info"
+  "activeChannels": ["bot", "botspam", "battles", "beat-challenge-submissions", "beat-battle", "beat-battle-vc"],
+  "gameStatus": "battlebot | !help for info"
 }
