--- a/service/beatbattlebot.service
+++ b/service/beatbattlebot.service
@@ -6,8 +6,8 @@ After=network.target
 [Service]
 Type=simple
 Environment=NODE_ENV=production
-WorkingDirectory=/opt/beatbattlebot
-ExecStart=/usr/bin/node bot.js >> /var/log/beatbattlebot.log
+WorkingDirectory=/opt/deploy/beatbattlebot
+ExecStart=/usr/bin/node bot.js >> /opt/deploy/beatbattlebot/LOGFILE
 Restart=on-failure
 RestartSec=60s
 #Only available in systemd 236+
