Some cleanup, couple small QoL fixes, discordutil stubs for formatting battle output

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/jakethedev/beatbattlebot"
   },
   "keywords": [
+    "music competition",
     "beat battle",
     "music",
     "organizer",
