--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,9 @@ package.old
 tags
 update.log
 
-*.iml
-.idea/
-*.pyc
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 pids
 *.pid
 *.seed
@@ -20,6 +15,7 @@ node_modules/
 .node_repl_history
 .env
 .config
+coverage/
 
 battlecache.json
 .token.json
