--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "devbot": "nodemon bot.js",
     "jestkillcache": "jest --clearCache",
     "jestdocs": "echo Check out the jest docs at https://jestjs.io/docs",
-    "jestcov": "jest --coverage --config=./.jestconfig.js tests/*",
-    "jestverbose": "jest --expand --config=./.jestconfig.js tests/*",
-    "jestwatch": "jest --watchAll --config=./.jestconfig.js tests/*",
-    "test": "jest --config=./.jestconfig.js tests/*",
+    "jestcov": "jest --coverage --config=./.jestconfig.js",
+    "jestverbose": "jest --expand --config=./.jestconfig.js",
+    "jestwatch": "jest --watchAll --config=./.jestconfig.js",
+    "test": "jest --config=./.jestconfig.js",
     "build": "echo Placeholder text for smushing libs into a bot.js for web page usage"
   },
   "repository": {
