--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-  "version": "1.0.7",
-  "releasenotes": "Now with submission deadlines and a couple randomizers!",
+  "version": "1.0.9",
+  "releasenotes": "Let the voting commence, your podium (!results) awaits!",
   "issuelink": "https://github.com/jakethedev/beatbattlebot/issues",
   "botkey": "!",
   "activeChannels": [
-    "bot", 
+    "bot",
     "botspam",
-    "🤖-bot-spam", 
-    "battles", 
-    "beat-challenge-submissions", 
-    "beat-battle", 
+    "🤖-bot-spam",
+    "battles",
+    "beat-challenge-submissions",
+    "beat-battle",
     "beat-battle-vc",
     "submissions",
     "battle-rules",
