--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   "homepage": "https://github.com/jakethedev/beatbattlebot#readme",
   "dependencies": {
     "dayjs": "^1.10.4",
-    "discord.js": "^12",
-    "opusscript": "0.0.7"
+    "discord.js": "^13"
   },
   "engines": {
     "node": ">=12.0.0"
