Fixing discord.js 13 deprecation of message event, fixing controller so tests fly and bot starts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
+    "starttracedep": "node --trace-deprecation bot.js",
     "devbot": "nodemon bot.js",
     "test": "jest --config=./.jestconfig.js ; rm -r coverage/",
     "testcov": "jest --coverage --config=./.jestconfig.js",
