Outline for new commands to set up in package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start:bot": "nodemon bot.js",
     "start:server": "nodemon server.js",
     "start:ui": "echo ERR: there is no UI project yet",
-    "starttracedep": "node --trace-deprecation bot.js",
-    "devbot": "nodemon bot.js",
+    "tracedep:bot": "node --trace-deprecation bot.js",
+    "tracedep:server": "node --trace-deprecation server.js",
+    "tracedep:ui": "node --trace-deprecation ui.js",
+    "build:bot": "echo ERR: not implemented",
+    "build:server": "echo ERR: not implemented",
+    "build:ui": "echo ERR: not implemented",
+    "deploy:bot": "echo ERR: not implemented",
+    "deploy:server": "echo ERR: not implemented",
+    "deploy:ui": "echo ERR: not implemented",
     "test": "jest --config=./.jestconfig.js",
     "testcov": "jest --coverage --config=./.jestconfig.js",
     "testdocs": "echo Check out the jest docs at https://jestjs.io/docs",
